--- a/world.css
+++ b/world.css
@@ -1,1 +1,24 @@
 /* Add your own styles */
+body{
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+
+
+header{
+    
+    text-align: center;
+    background-color: #171732;
+    color:white;
+    height:120px;
+    
+}
+
+header h1{
+    padding-top: 35px;
+}
+
+main{
+    padding-top:25px;
+}
